Agregar resto de archivos y funciones

--- a/index.html
+++ b/index.html
@@ -32,52 +32,17 @@
                 <a href="#" class="btn btn-secondary agregar-palabra">Agregar Palabra</a>
             </section>
         </div>
-        <div class="juego container hide">
+        <div class="juego container d-none">
             <canvas width="300" height="400"></canvas>
-            <ul class="lista lista-palabra">
-                <li class="item-palabra">A</li>
-                <li class="item-palabra">L</li>
-                <li class="item-palabra">E</li>
-                <li class="item-palabra">A</li>
-                <li class="item-palabra">T</li>
-                <li class="item-palabra">O</li>
-                <li class="item-palabra">R</li>
-                <li class="item-palabra">I</li>
-            </ul>
-            <ul class="lista">
-                <li class="guiones"></li>
-                <li class="guiones"></li>
-                <li class="guiones"></li>
-                <li class="guiones"></li>
-                <li class="guiones"></li>
-                <li class="guiones"></li>
-                <li class="guiones"></li>
-                <li class="guiones"></li>
-            </ul>
-            <ul class="lista lista-palabra-2">
-                <li class="item-palabra">D</li>
-                <li class="item-palabra">Q</li>
-                <li class="item-palabra">X</li>
-                <li class="item-palabra">P</li>
-                <li class="item-palabra">Y</li>
-                <li class="item-palabra">D</li>
-                <li class="item-palabra">Q</li>
-                <li class="item-palabra">X</li>
-                <li class="item-palabra">P</li>
-                <li class="item-palabra">Y</li>
-                <li class="item-palabra">D</li>
-                <li class="item-palabra">Q</li>
-                <li class="item-palabra">X</li>
-                <li class="item-palabra">P</li>
-                <li class="item-palabra">Y</li>
-
-            </ul>
+            <ul class="lista lista-palabra"></ul>
+            <ul class="lista lista-guiones"></ul>
+            <ul class="lista lista-palabra-2"></ul>
             <section class="inicio-botones">
-                <a href="#" class="btn btn-primary juego-nuevo">Juego Nuevo</a>
+                <a href="#" class="btn btn-primary resetear-juego">Juego Nuevo</a>
                 <a href="#" class="btn btn-secondary desistir">Desistir</a>
             </section>
         </div>
-        <div class="formulario container hide">
+        <div class="formulario container d-none">
             <form class="form">
                 <div class="container-textarea">
                     <textarea name="message" id="message" cols="30" rows="5" placeholder="Ingrese una palabra"
