Pruebas de una nueva estructuras de archivos y funciones

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <div class="inicio container">
             <section class="inicio-botones">
                 <a href="#" class="btn btn-primary juego-nuevo">Juego Nuevo</a>
-                <a href="#" class="btn btn-secondary agregar-palabra">Agregar Palabra</a>
+                <!-- <a href="#" class="btn btn-secondary agregar-palabra">Agregar Palabra</a> -->
             </section>
         </div>
         <div class="juego container d-none">
-            <canvas width="300" height="400"></canvas>
+            <canvas width="25" height="25"></canvas>
             <ul class="lista lista-palabra"></ul>
             <ul class="lista lista-guiones"></ul>
             <ul class="lista lista-palabra-2"></ul>
@@ -43,8 +43,8 @@
                 <h3 class="alert-lose d-none">Perdiste!</h3>
             </div>
             <section class="inicio-botones">
-                <a href="#" class="btn btn-primary resetear-juego">Juego Nuevo</a>
-                <a href="#" class="btn btn-secondary desistir">Desistir</a>
+                <!-- <a href="#" class="btn btn-primary resetear-juego">Juego Nuevo</a> -->
+                <!-- <a href="#" class="btn btn-secondary desistir">Desistir</a> -->
             </section>
         </div>
         <div class="formulario container d-none">
@@ -84,7 +84,8 @@
     </footer>
 
 
-    <script src="app.js" type="module"></script>
+    <!--<script src="app.js" type="module"></script>-->
+    <script src="index.js"></script>
 </body>
 
 </html>
