--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <ul class="lista lista-palabra-2"></ul>
             <!--Alertas-->
             <div class="container-alert d-none">
-                <h3 class="alert-win d-none">Ganaste!</h3>
-                <h3 class="alert-lose d-none">Perdiste!</h3>
+                <h3 class="alert-win d-none">Lo Has Logrado! Ganaste!</h3>
+                <h3 class="alert-lose d-none">Fin del Juego! Perdiste!</h3>
             </div>
             <section class="inicio-botones">
-                <!-- <a href="#" class="btn btn-primary resetear-juego">Juego Nuevo</a> -->
+                <a href="#" class="btn btn-primary resetear-juego">Juego Nuevo</a>
                 <!-- <a href="#" class="btn btn-secondary desistir">Desistir</a> -->
             </section>
         </div>
