Creacion del la funcion reset juego

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <section class="inicio-botones">
                 <a href="#" class="btn btn-primary resetear-juego">Juego Nuevo</a>
-                <!-- <a href="#" class="btn btn-secondary desistir">Desistir</a> -->
+                <a href="#" class="btn btn-secondary desistir">Desistir</a>
             </section>
         </div>
         <div class="formulario container d-none">
