Crear funcion de agregar nueva palabra a la lista

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="inicio container">
             <section class="inicio-botones">
                 <a href="#" class="btn btn-primary juego-nuevo">Juego Nuevo</a>
-                <!-- <a href="#" class="btn btn-secondary agregar-palabra">Agregar Palabra</a> -->
+                <a href="#" class="btn btn-secondary agregar-palabra">Agregar Palabra</a> 
             </section>
         </div>
         <div class="juego container d-none">
